fixed minor issue: whitespaces in filenames error

--- a/annotate-image/src/Navbar.css
+++ b/annotate-image/src/Navbar.css
@@ -30,6 +30,7 @@
 
 .upload-btn {
     background-color: rgb(76, 171, 231) !important;
+
 }
 
 .download-btn {
@@ -41,7 +42,7 @@ input[type="file"] {
 }
 
 .upload-label{
-    margin-left:15px;
+    margin-left:12px;
 }
 
 .custom-file-upload {
